<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splash.Splash">


    <Button
        android:id="@+id/splash_Button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/family"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/splash_button"
        android:ems="15"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />


    <Button
        android:id="@+id/splash_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splash_Button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/splash_button"
        android:ems="15"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/plaintext"
        android:layout_width="294dp"
        android:layout_height="103dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/plaintext"
        android:textColor="@color/maroom"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/family"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_below="@+id/plaintext"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/image"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/family"
        tools:ignore="UnknownId" />

</RelativeLayout>