<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_steps" />

    <ImageView
        android:id="@+id/playmusic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:background="@drawable/background_add_button"
        android:src="@drawable/ic_music"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:padding="@dimen/_5sdp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:max="1000"
        android:progress="1"
        android:indeterminateDuration="1000000"
        android:indeterminateDrawable="@drawable/cpb" />
    <ImageView
        android:id="@+id/step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-75dp"
        android:contentDescription="@string/step"
        android:src="@drawable/icon_metro_steps" />

    <TextView
        android:id="@+id/tv_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/_0"
        android:textColor="@color/maroom"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/step_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="steps"
        android:layout_marginBottom="50dp"
        android:textColor="@color/maroom"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_steps" />







</LinearLayout>