<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_up_process.Started">


    <ImageView
        android:id="@+id/up_design"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/join_up"
        android:src="@drawable/up_design"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/down_design"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/join_down"
        android:src="@drawable/down_design"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/start_next"
        app:srcCompat="@drawable/icon_material_navigate_next"
        tools:ignore="UsingOnClickInXml,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/let_start"
        android:layout_width="259dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/start_LetsGetStarted"
        android:textColor="@color/maroom"
        android:textSize="40sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:layout_marginHorizontal="30dp"
        app:startIconDrawable="@drawable/ic_baseline_person"
        android:layout_below="@+id/let_start"
        android:layout_marginTop="40dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailId"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_emailId"
        android:layout_marginHorizontal="30dp"
        app:startIconDrawable="@drawable/email_new"
        android:layout_below="@+id/username"
        android:layout_marginTop="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_password"
        android:layout_marginHorizontal="30dp"
        app:startIconDrawable="@drawable/password"
        android:layout_below="@+id/emailId"
        android:layout_marginTop="15dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/nxt_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/start_next"
        android:textColor="#5D4037"
        app:layout_constraintVertical_bias="0.893"
        tools:ignore="NotSibling,TextContrastCheck,UsingOnClickInXml" />


</RelativeLayout>