<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".timer_fragment.Timer">

    <View
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/timer_bg" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:alpha="75"
        android:src="@drawable/timer_icon" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp">

        <EditText
            android:id="@+id/timer_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/minutes"
            android:inputType="number"
            android:maxLength="4"/>

        <Button
            android:id="@+id/set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_grey"
            android:text="@string/set"
            android:textColor="@color/maroom"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="5dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="375dp"
        android:text="00:00"
        android:textColor="@color/maroom"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_countdown"
        android:layout_marginTop="100dp"
        android:gravity="center">

        <Button
            android:id="@+id/button_start_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_grey"
            android:ems="5"
            android:padding="10dp"
            android:text="@string/start"
            android:textColor="@color/maroom"
            android:textSize="25sp"
            app:cornerRadius="100dp"
            app:strokeColor="#EC0000"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:backgroundTint="@color/light_grey"
            android:ems="5"
            android:padding="10dp"
            android:text="@string/reset"
            android:textColor="@color/maroom"
            android:textSize="25sp"
            app:cornerRadius="100dp"
            app:strokeColor="#EC0000"
            app:strokeWidth="1dp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</RelativeLayout>