<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/virabhadrasana"
        android:layout_marginBottom="10dp"
        android:textSize="40sp"
        android:textColor="#BC0F0F"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txt">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/playmusic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:background="@drawable/background_add_button"
                android:src="@drawable/ic_music"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:padding="@dimen/_5sdp"/>
            <pl.droidsonroids.gif.GifImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@drawable/m_12"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/timer"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:text="01:00"
                android:textSize="20sp"
                android:background="@drawable/button_circular"/>

            <Button
                android:id="@+id/button_start_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/light_grey"
                android:layout_gravity="center_horizontal"
                android:ems="5"
                android:padding="10dp"
                android:text="@string/start"
                android:textColor="@color/maroom"
                android:textSize="25sp"
                app:cornerRadius="15dp"
                app:strokeColor="#EC0000"
                app:strokeWidth="1dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="30dp"
                android:text="@string/how_to_do_this"
                android:textSize="30sp"
                android:textColor="@color/maroom"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/VIRABHADRASANA_steps"
                android:padding="25dp"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>


    </ScrollView>


</RelativeLayout>