<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calculators.Age_Calculator">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/up_design"
        android:contentDescription="@string/join_up"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/down_design"
        android:contentDescription="@string/join_down"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/birthdate"
        android:textColor="@color/maroom"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="Today"
        android:textSize="25sp"
        android:visibility="invisible"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/DOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:text="Date of Birth"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/AGE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cal_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="Your Present Age"
        android:textStyle="bold"
        android:textColor="@color/maroom"
        android:textSize="25sp" />

    <Button
        android:id="@+id/dob_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/DOB"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:text="Enter Your Date of Birth"
        android:textSize="18dp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/cal_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/dob_btn"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:text="Calculate Your Age"
        android:textStyle="bold"
        android:textSize="18dp"
        />


</RelativeLayout>